--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ header:
   - title: About
     url: /about
 
-  - title: US Plant Breeding
+  - title: Programs
     url: /plant-breeding
 
   - title: Outreach
